force-app/main/default/objects/AIQ_CWTItem__c/AIQ_CWTItem__c.object-meta.xml
<CustomObject>
    <label>CWT Item</label>
    <nameField>
        <label>Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CWT Item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>