force-app/main/default/objects/AIQ_CWTItem__c/fields/CBSSKey__c.field-meta.xml
<CustomField>
    <fullName>CBSSKey__c</fullName>
    <externalId>true</externalId>
    <label>CBSSKey</label>
    <length>20</length>
    <type>Text</type>
</CustomField>