force-app/main/default/objects/AIQ_CWTItem__c/fields/PricingUOM__c.field-meta.xml
<CustomField>
    <fullName>PricingUOM__c</fullName>
    <label>Pricing UOM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>