force-app/main/default/objects/AIQ_CWTItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>CWT Item</relationshipLabel>
    <relationshipName>CWTItem</relationshipName>
    <type>Lookup</type>
</CustomField>