force-app/main/default/objects/AIQ_CWTItem__c/fields/StockUOM__c.field-meta.xml
<CustomField>
    <fullName>StockUOM__c</fullName>
    <label>Stock UOM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>